tests/syntax/invalid/decimal_literal_leading_zero.zn
def f() {
    // error: leading zero on decimal integer not allowed
    var x = 01;
}
